Fix for WFCORE-5835, Missing modular export when enabling dns.ping protocol